// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScrapDataMap > returns correctly formatted output... > while granularity is date 1`] = `
{
  "alternativeUnitId": null,
  "color": "#666666",
  "defined": true,
  "entityAltCount": 0,
  "entityCount": 1,
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Default",
  "entityId": [
    7,
  ],
  "entityKey": "scrapReasonId",
  "entityName": "Eesti - wrong measurements",
  "entityPctPlannedTime": 1,
  "entityPctPlannedTimeLabel": "100,00%",
  "entriesCount": 1,
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodProduction": 60,
  "goodProductionFormatted": "01m 00s",
  "groupingKey": "2022-11-25",
  "isFake": false,
  "itemGroupingId": "2022-11-25",
  "lotCode": null,
  "measure": "2022-11-25",
  "measureLabel": "25",
  "noData": null,
  "operator": null,
  "operatorId": [
    null,
  ],
  "product": "42x95",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productionOrder": null,
  "rowPlannedTime": 60,
  "rowProducedQty": 1,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": "0,00",
  "scrapAltQtyPct": 0,
  "scrapAltQtyPctFormatted": "0,00%",
  "scrapDuration": 60,
  "scrapDurationFormatted": "01m 00s",
  "scrapQty": 1,
  "scrapQtyFormatted": "1,00",
  "scrapQtyPct": 1,
  "scrapQtyPctFormatted": "100,00%",
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Pakkimine 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    54,
  ],
  "tableTimeLabel": "25.11.2022",
  "tooltipXLabel": "25.11.2022",
  "totalAltQtyFormatted": "0,00",
  "totalPlannedTime": null,
  "totalProducedAltQty": null,
  "totalProducedQty": null,
  "totalQtyFormatted": "1,00",
  "unitId": "tk",
  "xAxisKey": "date",
  "xScaleValue": "2022-11-25",
  "xScaleValueFormatted": "25.11.2022",
}
`;

exports[`ScrapDataMap > returns correctly formatted output... > while granularity is month 1`] = `
{
  "alternativeUnitId": null,
  "color": "#666666",
  "defined": true,
  "entityAltCount": 0,
  "entityCount": 1,
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Default",
  "entityId": [
    7,
  ],
  "entityKey": "scrapReasonId",
  "entityName": "Eesti - wrong measurements",
  "entityPctPlannedTime": 1,
  "entityPctPlannedTimeLabel": "100,00%",
  "entriesCount": 1,
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodProduction": 60,
  "goodProductionFormatted": "01m 00s",
  "groupingKey": "202211",
  "isFake": false,
  "itemGroupingId": "202211",
  "lotCode": null,
  "measure": "202211",
  "measureLabel": "November",
  "noData": null,
  "operator": null,
  "operatorId": [
    null,
  ],
  "product": "42x95",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productionOrder": null,
  "rowPlannedTime": 60,
  "rowProducedQty": 1,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": "0,00",
  "scrapAltQtyPct": 0,
  "scrapAltQtyPctFormatted": "0,00%",
  "scrapDuration": 60,
  "scrapDurationFormatted": "01m 00s",
  "scrapQty": 1,
  "scrapQtyFormatted": "1,00",
  "scrapQtyPct": 1,
  "scrapQtyPctFormatted": "100,00%",
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Pakkimine 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    54,
  ],
  "tableTimeLabel": "November",
  "tooltipXLabel": "01.11.2022 - 30.11.2022",
  "totalAltQtyFormatted": "0,00",
  "totalPlannedTime": null,
  "totalProducedAltQty": null,
  "totalProducedQty": null,
  "totalQtyFormatted": "1,00",
  "unitId": "tk",
  "xAxisKey": "month",
  "xScaleValue": "202211",
  "xScaleValueFormatted": "01.11.2022 - 30.11.2022",
}
`;

exports[`ScrapDataMap > returns correctly formatted output... > while granularity is total 1`] = `
{
  "alternativeUnitId": null,
  "color": "#666666",
  "defined": true,
  "entityAltCount": 0,
  "entityCount": 1,
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Default",
  "entityId": [
    7,
  ],
  "entityKey": "scrapReasonId",
  "entityName": "Eesti - wrong measurements",
  "entityPctPlannedTime": 1,
  "entityPctPlannedTimeLabel": "100,00%",
  "entriesCount": 1,
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodProduction": 60,
  "goodProductionFormatted": "01m 00s",
  "groupingKey": 54,
  "isFake": false,
  "itemGroupingId": 54,
  "lotCode": "LOT-001",
  "measure": 54,
  "measureLabel": "Pakkimine 1",
  "noData": null,
  "operator": null,
  "operatorId": [
    null,
  ],
  "product": "42x95",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productionOrder": "ORDER-42",
  "rowPlannedTime": 60,
  "rowProducedQty": 1,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": "0,00",
  "scrapAltQtyPct": 0,
  "scrapAltQtyPctFormatted": "0,00%",
  "scrapDuration": 60,
  "scrapDurationFormatted": "01m 00s",
  "scrapQty": 1,
  "scrapQtyFormatted": "1,00",
  "scrapQtyPct": 1,
  "scrapQtyPctFormatted": "100,00%",
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Pakkimine 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    54,
  ],
  "tableTimeLabel": "Pakkimine 1",
  "tooltipXLabel": "Pakkimine 1",
  "totalAltQtyFormatted": "0,00",
  "totalPlannedTime": null,
  "totalProducedAltQty": null,
  "totalProducedQty": null,
  "totalQtyFormatted": "1,00",
  "unitId": "tk",
  "xAxisKey": "entityId",
  "xScaleValue": 54,
  "xScaleValueFormatted": "",
}
`;

exports[`ScrapDataMap > returns correctly formatted output... > while granularity is weekofyear 1`] = `
{
  "alternativeUnitId": null,
  "color": "#666666",
  "defined": true,
  "entityAltCount": 0,
  "entityCount": 1,
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Default",
  "entityId": [
    7,
  ],
  "entityKey": "scrapReasonId",
  "entityName": "Eesti - wrong measurements",
  "entityPctPlannedTime": 1,
  "entityPctPlannedTimeLabel": "100,00%",
  "entriesCount": 1,
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodProduction": 60,
  "goodProductionFormatted": "01m 00s",
  "groupingKey": "202247",
  "isFake": false,
  "itemGroupingId": "202247",
  "lotCode": null,
  "measure": "202247",
  "measureLabel": "47",
  "noData": null,
  "operator": null,
  "operatorId": [
    null,
  ],
  "product": "42x95",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productionOrder": null,
  "rowPlannedTime": 60,
  "rowProducedQty": 1,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": "0,00",
  "scrapAltQtyPct": 0,
  "scrapAltQtyPctFormatted": "0,00%",
  "scrapDuration": 60,
  "scrapDurationFormatted": "01m 00s",
  "scrapQty": 1,
  "scrapQtyFormatted": "1,00",
  "scrapQtyPct": 1,
  "scrapQtyPctFormatted": "100,00%",
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Pakkimine 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    54,
  ],
  "tableTimeLabel": "Week 47",
  "tooltipXLabel": "Week 47",
  "totalAltQtyFormatted": "0,00",
  "totalPlannedTime": null,
  "totalProducedAltQty": null,
  "totalProducedQty": null,
  "totalQtyFormatted": "1,00",
  "unitId": "tk",
  "xAxisKey": "weekofyear",
  "xScaleValue": "202247",
  "xScaleValueFormatted": "Week 47",
}
`;

exports[`ScrapDataMap > returns correctly formatted output... > while granularity is year 1`] = `
{
  "alternativeUnitId": null,
  "color": "#666666",
  "defined": true,
  "entityAltCount": 0,
  "entityCount": 1,
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Default",
  "entityId": [
    7,
  ],
  "entityKey": "scrapReasonId",
  "entityName": "Eesti - wrong measurements",
  "entityPctPlannedTime": 1,
  "entityPctPlannedTimeLabel": "100,00%",
  "entriesCount": 1,
  "factory": null,
  "factoryId": [
    null,
  ],
  "goodProduction": 60,
  "goodProductionFormatted": "01m 00s",
  "groupingKey": "2022",
  "isFake": false,
  "itemGroupingId": "2022",
  "lotCode": null,
  "measure": "2022",
  "measureLabel": "2022",
  "noData": null,
  "operator": null,
  "operatorId": [
    null,
  ],
  "product": "42x95",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productionOrder": null,
  "rowPlannedTime": 60,
  "rowProducedQty": 1,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": "0,00",
  "scrapAltQtyPct": 0,
  "scrapAltQtyPctFormatted": "0,00%",
  "scrapDuration": 60,
  "scrapDurationFormatted": "01m 00s",
  "scrapQty": 1,
  "scrapQtyFormatted": "1,00",
  "scrapQtyPct": 1,
  "scrapQtyPctFormatted": "100,00%",
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Pakkimine 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    54,
  ],
  "tableTimeLabel": "2022",
  "tooltipXLabel": "2022",
  "totalAltQtyFormatted": "0,00",
  "totalPlannedTime": null,
  "totalProducedAltQty": null,
  "totalProducedQty": null,
  "totalQtyFormatted": "1,00",
  "unitId": "tk",
  "xAxisKey": "year",
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;

exports[`ScrapDataMap > returns correctly unformatted output... > while granularity is date 1`] = `
{
  "alternativeUnitId": null,
  "color": "#666666",
  "defined": null,
  "entityAltCount": null,
  "entityCount": 1,
  "entityGroupId": 1,
  "entityGroupName": "Default",
  "entityId": 7,
  "entityKey": null,
  "entityName": "Eesti - wrong measurements",
  "entityPctPlannedTime": null,
  "entityPctPlannedTimeLabel": null,
  "entriesCount": 1,
  "factory": null,
  "factoryId": null,
  "goodProduction": 60,
  "goodProductionFormatted": 60,
  "groupingKey": null,
  "isFake": false,
  "itemGroupingId": "2022-11-25",
  "lotCode": null,
  "measure": "2022-11-25",
  "measureLabel": "2022-11-25",
  "noData": null,
  "operator": null,
  "operatorId": null,
  "product": "42x95",
  "productGroup": null,
  "productGroupId": null,
  "productionOrder": null,
  "rowPlannedTime": 60,
  "rowProducedQty": 1,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": null,
  "scrapAltQtyPct": null,
  "scrapAltQtyPctFormatted": null,
  "scrapDuration": 60,
  "scrapDurationFormatted": 60,
  "scrapQty": 1,
  "scrapQtyFormatted": 1,
  "scrapQtyPct": null,
  "scrapQtyPctFormatted": null,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Pakkimine 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 54,
  "tableTimeLabel": "2022-11-25",
  "tooltipXLabel": "2022-11-25",
  "totalAltQtyFormatted": null,
  "totalPlannedTime": null,
  "totalProducedAltQty": null,
  "totalProducedQty": null,
  "totalQtyFormatted": null,
  "unitId": "tk",
  "xAxisKey": "date",
  "xScaleValue": "2022-11-25",
  "xScaleValueFormatted": "2022-11-25",
}
`;

exports[`ScrapDataMap > returns correctly unformatted output... > while granularity is month 1`] = `
{
  "alternativeUnitId": null,
  "color": "#666666",
  "defined": null,
  "entityAltCount": null,
  "entityCount": 1,
  "entityGroupId": 1,
  "entityGroupName": "Default",
  "entityId": 7,
  "entityKey": null,
  "entityName": "Eesti - wrong measurements",
  "entityPctPlannedTime": null,
  "entityPctPlannedTimeLabel": null,
  "entriesCount": 1,
  "factory": null,
  "factoryId": null,
  "goodProduction": 60,
  "goodProductionFormatted": 60,
  "groupingKey": null,
  "isFake": false,
  "itemGroupingId": "202211",
  "lotCode": null,
  "measure": "202211",
  "measureLabel": "202211",
  "noData": null,
  "operator": null,
  "operatorId": null,
  "product": "42x95",
  "productGroup": null,
  "productGroupId": null,
  "productionOrder": null,
  "rowPlannedTime": 60,
  "rowProducedQty": 1,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": null,
  "scrapAltQtyPct": null,
  "scrapAltQtyPctFormatted": null,
  "scrapDuration": 60,
  "scrapDurationFormatted": 60,
  "scrapQty": 1,
  "scrapQtyFormatted": 1,
  "scrapQtyPct": null,
  "scrapQtyPctFormatted": null,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Pakkimine 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 54,
  "tableTimeLabel": "202211",
  "tooltipXLabel": "202211",
  "totalAltQtyFormatted": null,
  "totalPlannedTime": null,
  "totalProducedAltQty": null,
  "totalProducedQty": null,
  "totalQtyFormatted": null,
  "unitId": "tk",
  "xAxisKey": "month",
  "xScaleValue": "202211",
  "xScaleValueFormatted": "202211",
}
`;

exports[`ScrapDataMap > returns correctly unformatted output... > while granularity is total 1`] = `
{
  "alternativeUnitId": null,
  "color": "#666666",
  "defined": null,
  "entityAltCount": null,
  "entityCount": 1,
  "entityGroupId": 1,
  "entityGroupName": "Default",
  "entityId": 7,
  "entityKey": null,
  "entityName": "Eesti - wrong measurements",
  "entityPctPlannedTime": null,
  "entityPctPlannedTimeLabel": null,
  "entriesCount": 1,
  "factory": null,
  "factoryId": null,
  "goodProduction": 60,
  "goodProductionFormatted": 60,
  "groupingKey": null,
  "isFake": false,
  "itemGroupingId": 54,
  "lotCode": "LOT-001",
  "measure": 54,
  "measureLabel": "Pakkimine 1",
  "noData": null,
  "operator": null,
  "operatorId": null,
  "product": "42x95",
  "productGroup": null,
  "productGroupId": null,
  "productionOrder": "ORDER-42",
  "rowPlannedTime": 60,
  "rowProducedQty": 1,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": null,
  "scrapAltQtyPct": null,
  "scrapAltQtyPctFormatted": null,
  "scrapDuration": 60,
  "scrapDurationFormatted": 60,
  "scrapQty": 1,
  "scrapQtyFormatted": 1,
  "scrapQtyPct": null,
  "scrapQtyPctFormatted": null,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Pakkimine 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 54,
  "tableTimeLabel": "Pakkimine 1",
  "tooltipXLabel": "Pakkimine 1",
  "totalAltQtyFormatted": null,
  "totalPlannedTime": null,
  "totalProducedAltQty": null,
  "totalProducedQty": null,
  "totalQtyFormatted": null,
  "unitId": "tk",
  "xAxisKey": "entityId",
  "xScaleValue": 54,
  "xScaleValueFormatted": 54,
}
`;

exports[`ScrapDataMap > returns correctly unformatted output... > while granularity is weekofyear 1`] = `
{
  "alternativeUnitId": null,
  "color": "#666666",
  "defined": null,
  "entityAltCount": null,
  "entityCount": 1,
  "entityGroupId": 1,
  "entityGroupName": "Default",
  "entityId": 7,
  "entityKey": null,
  "entityName": "Eesti - wrong measurements",
  "entityPctPlannedTime": null,
  "entityPctPlannedTimeLabel": null,
  "entriesCount": 1,
  "factory": null,
  "factoryId": null,
  "goodProduction": 60,
  "goodProductionFormatted": 60,
  "groupingKey": null,
  "isFake": false,
  "itemGroupingId": "202247",
  "lotCode": null,
  "measure": "202247",
  "measureLabel": "202247",
  "noData": null,
  "operator": null,
  "operatorId": null,
  "product": "42x95",
  "productGroup": null,
  "productGroupId": null,
  "productionOrder": null,
  "rowPlannedTime": 60,
  "rowProducedQty": 1,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": null,
  "scrapAltQtyPct": null,
  "scrapAltQtyPctFormatted": null,
  "scrapDuration": 60,
  "scrapDurationFormatted": 60,
  "scrapQty": 1,
  "scrapQtyFormatted": 1,
  "scrapQtyPct": null,
  "scrapQtyPctFormatted": null,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Pakkimine 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 54,
  "tableTimeLabel": "202247",
  "tooltipXLabel": "202247",
  "totalAltQtyFormatted": null,
  "totalPlannedTime": null,
  "totalProducedAltQty": null,
  "totalProducedQty": null,
  "totalQtyFormatted": null,
  "unitId": "tk",
  "xAxisKey": "weekofyear",
  "xScaleValue": "202247",
  "xScaleValueFormatted": "202247",
}
`;

exports[`ScrapDataMap > returns correctly unformatted output... > while granularity is year 1`] = `
{
  "alternativeUnitId": null,
  "color": "#666666",
  "defined": null,
  "entityAltCount": null,
  "entityCount": 1,
  "entityGroupId": 1,
  "entityGroupName": "Default",
  "entityId": 7,
  "entityKey": null,
  "entityName": "Eesti - wrong measurements",
  "entityPctPlannedTime": null,
  "entityPctPlannedTimeLabel": null,
  "entriesCount": 1,
  "factory": null,
  "factoryId": null,
  "goodProduction": 60,
  "goodProductionFormatted": 60,
  "groupingKey": null,
  "isFake": false,
  "itemGroupingId": "2022",
  "lotCode": null,
  "measure": "2022",
  "measureLabel": "2022",
  "noData": null,
  "operator": null,
  "operatorId": null,
  "product": "42x95",
  "productGroup": null,
  "productGroupId": null,
  "productionOrder": null,
  "rowPlannedTime": 60,
  "rowProducedQty": 1,
  "scrapAltQty": null,
  "scrapAltQtyFormatted": null,
  "scrapAltQtyPct": null,
  "scrapAltQtyPctFormatted": null,
  "scrapDuration": 60,
  "scrapDurationFormatted": 60,
  "scrapQty": 1,
  "scrapQtyFormatted": 1,
  "scrapQtyPct": null,
  "scrapQtyPctFormatted": null,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Pakkimine 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 54,
  "tableTimeLabel": "2022",
  "tooltipXLabel": "2022",
  "totalAltQtyFormatted": null,
  "totalPlannedTime": null,
  "totalProducedAltQty": null,
  "totalProducedQty": null,
  "totalQtyFormatted": null,
  "unitId": "tk",
  "xAxisKey": "year",
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;
